# multi-agents-server

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  dev-deploy.md  dev-optimize.md  dev-total.md  dev-validate-v1.md  dev-vector.md  docker-compose.yml  pyproject.toml
app/: browser_tasks.py  errors.py  main.py  runtime.py  schemas.py  storage.py
app/agents/: __init__.py  base.py  fallback.py  planner.py  qa.py  registry.py  tool.py
app/api/: responses.py  routes.py
app/config/: __init__.py  settings.py
app/domain/: __init__.py  entities.py
app/graph/: __init__.py  state.py  workflow.py
app/models/: __init__.py  base.py  factory.py  minimax.py  mock.py
app/observability/: __init__.py  logging.py
app/rag/: __init__.py  embedder.py  index_manifest.py  loader.py  parser.py  retriever.py  service.py  splitter.py  types.py  vector_store.py
app/repositories/: __init__.py  base.py  factory.py  memory.py  models.py  schema.py  sql.py
app/tools/: __init__.py  base.py  browser_use.py  mcp_adapter.py  registry.py  skill_adapter.py  skill_handlers.py  validation.py
configs/: app.yaml
data/: knowledge_chunks.manifest.json  vector_store.manifest.json
data/knowledge_base/: deploy.md  index.json  verification.md  xl-intro.md
docs/: architecture.md  data-model.md  deploy.md
scripts/: bootstrap_runtime.py  build_kb.py  init_db.py  smoke_docker.py
tests/integration/: test_chat_flow.py
tests/unit/: test_bootstrap_runtime.py  test_embedder.py  test_observability.py  test_planner.py  test_provider.py  test_rag.py  test_repository.py  (+2 more)
(+3 files in other folders)
