[project]
name = "multi-agents-server"
version = "0.1.0"
description = "A LangGraph-based multi-agent QA assistant MVP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "browser-use>=0.5.0,<1.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<0.29.0",
  "langchain-core>=0.3.0,<0.4.0",
  "langchain-text-splitters>=0.3.0,<0.4.0",
  "langgraph>=0.2.0,<0.4.0",
  "pymysql>=1.1.0,<2.0.0",
  "python-multipart>=0.0.20,<0.1.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn>=0.34.0,<0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.25.0,<0.26.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-p no:capture"
